--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.1.0",
     "@types/next": "^9.0.0",
     "@types/node": "20.3.1",
     "@types/react": "18.2.12",
     "@types/react-dom": "18.2.5",
+    "axios": "^1.6.7",
     "bootstrap": "5.2.2",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
@@ -30,6 +32,7 @@
     "react-use": "^17.4.0",
     "sass": "^1.63.4",
     "slick-carousel": "^1.8.1",
+    "sweetalert2": "^11.10.5",
     "swiper": "^9.4.1",
     "typescript": "5.1.3",
     "wowjs": "^1.1.3",
